--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,8 +2,11 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy" : "http://localhost:3310",
+  "proxy": "http://localhost:3310",
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.6.2",
+    "@mui/styles": "^5.6.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
