--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fullstack_web_project.v.1",
   "version": "1.0.0",
-  "proxy":"http://localhost:3310",
+  "proxy": "http://localhost:3310",
   "main": "server.ts",
   "keywords": [],
   "description": "my first fullstack web project",
@@ -11,8 +11,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsnd --respawn ./src/server/server.ts",
     "wds": "npm run start --prefix ../frontend",
-    "start": "ts-node  ./src/server/server.ts",    
-    "devt": "tsc ./src/server/server.ts"
+    "start": "ts-node  ./src/server/server.ts",
+    "devt": "tsc ./src/server/server.ts",
+    "generate": "ts-node  ./src/server/server.ts",
+    "migrate": "prisma migrate dev --name"
   },
   "repository": {
     "type": "git",
@@ -23,6 +25,7 @@
   },
   "homepage": "https://github.com/inkognit/fullstack_web_project.v.1#readme",
   "dependencies": {
+    "@prisma/client": "^3.12.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "body-parser": "^1.20.0",
@@ -35,6 +38,8 @@
     "typescript": "^4.6.3"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.12"
+    "@types/cors": "^2.8.12",
+    "prettier": "2.6.2",
+    "prisma": "^3.12.0"
   }
 }
