--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "favicons-webpack-plugin": "^5.0.2",
+    "prettier": "2.6.2",
     "webpack-pwa-manifest": "^4.3.0"
   }
 }
