--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,12 @@
   "author": "michael and other",
   "license": "ISC",
   "scripts": {
-    "dev": "tsnd -respawn --pretty --transpile-only ./src/server/server.ts",
+    "dev": "tsnd --respawn  ./src/server/server.ts",
     "wds": "npm run start --prefix ../frontend",
     "start": "ts-node  ./dist/src/server/server.ts",
     "clean": "rm -fr build",
     "build": "npm run clean && tsc --build",
-    "generate": "ts-node  ./src/server/server.ts",
+    "generate": "prisma generate",
     "migrate": "prisma migrate dev --name",
     "deploy": "tsc && git add . && git commit -m Heroku && git push heroku master"
   },
@@ -29,6 +29,7 @@
     "@prisma/client": "^3.12.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -38,6 +39,7 @@
     "typescript": "^4.6.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "prettier": "2.6.2",
     "prisma": "^3.12.0"
